tests/baselines/reference/collisionExportsRequireAndAlias.errors.txt
collisionExportsRequireAndAlias_file2.ts(1,8): error TS2441: Duplicate identifier 'require'. Compiler reserves name 'require' in top level scope of a module.
collisionExportsRequireAndAlias_file2.ts(2,8): error TS2441: Duplicate identifier 'exports'. Compiler reserves name 'exports' in top level scope of a module.


==== collisionExportsRequireAndAlias_file2.ts (2 errors) ====
    import require = require('collisionExportsRequireAndAlias_file1'); // Error
           ~~~~~~~
!!! error TS2441: Duplicate identifier 'require'. Compiler reserves name 'require' in top level scope of a module.
    import exports = require('collisionExportsRequireAndAlias_file3333'); // Error
           ~~~~~~~
!!! error TS2441: Duplicate identifier 'exports'. Compiler reserves name 'exports' in top level scope of a module.
    export function foo() {
        require.bar();
    }
    export function foo2() {
        exports.bar2();
    }
==== collisionExportsRequireAndAlias_file1.ts (0 errors) ====
    export function bar() {
    }
    
==== collisionExportsRequireAndAlias_file3333.ts (0 errors) ====
    export function bar2() {
    }